--- a/html/index.html
+++ b/html/index.html
@@ -31,12 +31,11 @@
                     </div>
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
-                <ul class="nav navbar-nav navbar-right">
-                    <button class="btn btn-default navbar-btn" id="login-student">Student Login</button>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <button class="btn btn-default navbar-btn" id="login-tutor">Tutor Login</button>
-                </ul>
+                <div id="navbar-right" class="navbar-right">
+                    <ul class="nav navbar-nav navbar-right">
+                        <button class="btn btn-default navbar-btn" id="login-student">Login</button>
+                    </ul>
+                </div>
             </div>
             <!-- /.navbar-collapse -->
         </div>
