--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>CCEL Scheduler</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="../js/bootbox.min.js"></script>
+    <script src="/js/bootbox.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="../js/home.js"></script>
+    <script src="/js/home.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/home.css">
 </head>
 
@@ -45,10 +45,11 @@
         <h3 class="panel-heading">List of Sessions</h3>
         <div class="panel-body">
             <div id="list-sessions" class="container-fluid col-md-12">
-                <div class="list-group">
+                <div id="sessions" class="list-group">
                     <a href="#" class="list-group-item">
+                        <button class="btn btn-default btn-add-to-sessions pull-right">Add to My Sessions</button>
                         <h4 class="list-group-item-heading">List Item 1</h4>
-                        <p class="list-group-item-text">List Item text.</p>
+                        <span class="list-group-item-text">List Item text.</span>
                     </a>
                     <a href="#" class="list-group-item">
                         <h4 class="list-group-item-heading">List Item 2</h4>
