--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="/js/bootbox.min.js"></script>
+    <script src="//code.jquery.com/qunit/qunit-1.20.0.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.20.0.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src="/js/home.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/home.css">
+    <script src="testing/tests.js"></script>
 </head>
 
 <body>
@@ -89,11 +92,19 @@
                 </li>
             </ul>
         </nav>
+        <div id="qunit"></div>
+        <div id="qunit-fixture"></div>
+        <script type="text/javascript">
+        QUnit.test("Basic Unit Tests", function(assert) {
+            assert.equal(loginHandler("", ""), null, "loginHandler strings");
+            assert.equal(loginHandler(), null, "loginhandler empty");
+            assert.equal(loginForm("student"), null, "loginform string");
+            assert.equal(loginForm(""), null, "loginform emptystring");
+            assert.ok(registerForm("student"), "registerFormstring");
+            assert.equal(registerForm(""), "", "registerForm emptystring");
+        });
+        </script>
     </div>
-    </div>
-    </div>
-    <!-- <div class="row"> -->
-    <!-- </div> -->
 </body>
 
 </html>
