added mediator php pattern, student attending functionality.

--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
                 </li>
             </ul>
         </nav>
-        <div id="qunit"></div>
-        <div id="qunit-fixture"></div>
+        <!-- <div id="qunit"></div> -->
+        <!-- <div id="qunit-fixture"></div> -->
         <script type="text/javascript">
-        QUnit.test("Basic Unit Tests", function(assert) {
-            assert.equal(loginHandler("", ""), null, "loginHandler strings");
-            assert.equal(loginHandler(), null, "loginhandler empty");
-            assert.equal(loginForm("student"), null, "loginform string");
-            assert.equal(loginForm(""), null, "loginform emptystring");
-            assert.ok(registerForm("student"), "registerFormstring");
-            assert.equal(registerForm(""), "", "registerForm emptystring");
-        });
+        // QUnit.test("Basic Unit Tests", function(assert) {
+        //     assert.equal(loginHandler("", ""), null, "loginHandler strings");
+        //     assert.equal(loginHandler(), null, "loginhandler empty");
+        //     assert.equal(loginForm("student"), null, "loginform string");
+        //     assert.equal(loginForm(""), null, "loginform emptystring");
+        // assert.ok(registerForm("student"), "registerFormstring");
+        // assert.equal(registerForm(""), "", "registerForm emptystring");
+        // });
         </script>
     </div>
 </body>
