--- a/index.html
+++ b/index.html
@@ -11,100 +11,99 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src="/js/home.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/home.css">
-    <script src="testing/tests.js"></script>
-</head>
+    <script src="/js/jquery.cookie.js"></script>
 
-<body>
-    <!-- top navbar -->
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">CCEL</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
+    <body>
+        <!-- top navbar -->
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">CCEL</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <form class="navbar-form navbar-left" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
+                    <div id="navbar-right" class="navbar-right">
+                        <ul class="nav navbar-nav navbar-right">
+                            <button class="btn btn-default navbar-btn" id="login-student">Login</button>
+                        </ul>
                     </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
-                <div id="navbar-right" class="navbar-right">
-                    <ul class="nav navbar-nav navbar-right">
-                        <button class="btn btn-default navbar-btn" id="login-student">Login</button>
-                    </ul>
                 </div>
+                <!-- /.navbar-collapse -->
             </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-    <div class="main-pane panel panel-default col-md-10 col-md-offset-1">
-        <h3 class="panel-heading">List of Sessions</h3>
-        <div class="panel-body">
-            <div id="list-sessions" class="container-fluid col-md-12">
-                <div id="sessions" class="list-group">
-                    <a href="#" class="list-group-item">
-                        <button class="btn btn-default btn-add-to-sessions pull-right">Add to My Sessions</button>
-                        <h4 class="list-group-item-heading">List Item 1</h4>
-                        <span class="list-group-item-text">List Item text.</span>
-                    </a>
-                    <a href="#" class="list-group-item">
-                        <h4 class="list-group-item-heading">List Item 2</h4>
-                        <p class="list-group-item-text">List Item text.</p>
-                    </a>
-                    <a href="#" class="list-group-item">
-                        <h4 class="list-group-item-heading">List Item 3</h4>
-                        <p class="list-group-item-text">List Item text.</p>
-                    </a>
-                    <a href="#" class="list-group-item">
-                        <h4 class="list-group-item-heading">List Item 4</h4>
-                        <p class="list-group-item-text">List Item text.</p>
-                    </a>
-                    <a href="#" class="list-group-item">
-                        <h4 class="list-group-item-heading">List Item 5</h4>
-                        <p class="list-group-item-text">List Item text.</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <nav class="col-md-4 col-md-offset-4">
-            <ul class="pagination">
-                <li>
-                    <a href="#" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li>
-                    <a href="#" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            </ul>
+            <!-- /.container-fluid -->
         </nav>
-        <!-- <div id="qunit"></div> -->
-        <!-- <div id="qunit-fixture"></div> -->
-        <script type="text/javascript">
-        // QUnit.test("Basic Unit Tests", function(assert) {
-        //     assert.equal(loginHandler("", ""), null, "loginHandler strings");
-        //     assert.equal(loginHandler(), null, "loginhandler empty");
-        //     assert.equal(loginForm("student"), null, "loginform string");
-        //     assert.equal(loginForm(""), null, "loginform emptystring");
-        // assert.ok(registerForm("student"), "registerFormstring");
-        // assert.equal(registerForm(""), "", "registerForm emptystring");
-        // });
-        </script>
-    </div>
-</body>
+        <div class="main-pane panel panel-default col-md-10 col-md-offset-1">
+            <h3 class="panel-heading">List of Sessions</h3>
+            <div class="panel-body">
+                <div id="list-sessions" class="container-fluid col-md-12">
+                    <div id="sessions" class="list-group">
+                        <a href="#" class="list-group-item">
+                            <button class="btn btn-default btn-add-to-sessions pull-right">Add to My Sessions</button>
+                            <h4 class="list-group-item-heading">List Item 1</h4>
+                            <span class="list-group-item-text">List Item text.</span>
+                        </a>
+                        <a href="#" class="list-group-item">
+                            <h4 class="list-group-item-heading">List Item 2</h4>
+                            <p class="list-group-item-text">List Item text.</p>
+                        </a>
+                        <a href="#" class="list-group-item">
+                            <h4 class="list-group-item-heading">List Item 3</h4>
+                            <p class="list-group-item-text">List Item text.</p>
+                        </a>
+                        <a href="#" class="list-group-item">
+                            <h4 class="list-group-item-heading">List Item 4</h4>
+                            <p class="list-group-item-text">List Item text.</p>
+                        </a>
+                        <a href="#" class="list-group-item">
+                            <h4 class="list-group-item-heading">List Item 5</h4>
+                            <p class="list-group-item-text">List Item text.</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <nav class="col-md-4 col-md-offset-4">
+                <ul class="pagination">
+                    <li>
+                        <a href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li>
+                        <a href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <!-- <div id="qunit"></div> -->
+            <!-- <div id="qunit-fixture"></div> -->
+            <script type="text/javascript">
+            // QUnit.test("Basic Unit Tests", function(assert) {
+            //     assert.equal(loginHandler("", ""), null, "loginHandler strings");
+            //     assert.equal(loginHandler(), null, "loginhandler empty");
+            //     assert.equal(loginForm("student"), null, "loginform string");
+            //     assert.equal(loginForm(""), null, "loginform emptystring");
+            // assert.ok(registerForm("student"), "registerFormstring");
+            // assert.equal(registerForm(""), "", "registerForm emptystring");
+            // });
+            </script>
+        </div>
+    </body>
 
 </html>
