--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
 
 <head>
     <title>CCEL Scheduler</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="/js/bootbox.min.js"></script>
-    <script src="//code.jquery.com/qunit/qunit-1.20.0.js"></script>
-    <link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.20.0.css">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="/js/home.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/home.css">
-    <script src="/js/jquery.cookie.js"></script>
+
+    <head>
+        <title>CCEL Scheduler</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <!-- jquery -->
+        <script src="/js/jquery.cookie.js"></script>
+        <!-- //jquery cookie plugin -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+        <!-- bootstrap js -->
+        <script src="/js/bootbox.min.js"></script>
+        <!-- //bootbox -->
+        <script src="//code.jquery.com/qunit/qunit-1.20.0.js"></script>
+        <!-- //QUnit js-->
+        <script src="/js/home.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <!-- //bootstrap css -->
+        <link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.20.0.css">
+        <!-- //QUnit css -->
+        <link rel="stylesheet" type="text/css" href="../css/home.css">
+    </head>
 
     <body>
         <!-- top navbar -->
@@ -29,7 +40,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <form class="navbar-form navbar-left" role="search">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Search">
+                            <input type="text" class="form-control" placeholder="Search for Sessions">
                         </div>
                         <button type="submit" class="btn btn-default">Submit</button>
                     </form>
