--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script src="//code.jquery.com/qunit/qunit-1.20.0.js"></script>
         <!-- //QUnit js-->
         <script src="/js/home.js"></script>
+        <script src="/js/pagination.js"></script>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <!-- //bootstrap css -->
         <link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.20.0.css">
@@ -40,9 +41,9 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <form class="navbar-form navbar-left" role="search">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Search for Sessions">
+                            <input type="text" class="search-box form-control" placeholder="Search for Sessions">
                         </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
+                        <button type="button" class="btn btn-search btn-default">Submit</button>
                     </form>
                     <div id="navbar-right" class="navbar-right">
                         <ul class="nav navbar-nav navbar-right">
@@ -62,37 +63,6 @@
                     </div>
                 </div>
             </div>
-            <nav class="col-md-4 col-md-offset-4">
-                <ul class="pagination">
-                    <li>
-                        <a href="#" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                    </li>
-                    <li><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
-                    <li>
-                        <a href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <!-- <div id="qunit"></div> -->
-            <!-- <div id="qunit-fixture"></div> -->
-            <script type="text/javascript">
-            // QUnit.test("Basic Unit Tests", function(assert) {
-            //     assert.equal(loginHandler("", ""), null, "loginHandler strings");
-            //     assert.equal(loginHandler(), null, "loginhandler empty");
-            //     assert.equal(loginForm("student"), null, "loginform string");
-            //     assert.equal(loginForm(""), null, "loginform emptystring");
-            // assert.ok(registerForm("student"), "registerFormstring");
-            // assert.equal(registerForm(""), "", "registerForm emptystring");
-            // });
-            </script>
         </div>
     </body>
 
