--- a/html/messagecenter.html
+++ b/html/messagecenter.html
@@ -68,12 +68,7 @@
                 <a href="#" class="btn btn-danger btn-sm btn-block" id='compose' role="button"><i class="glyphicon glyphicon-edit"></i> Compose</a>
                 <hr>
                 <ul class="nav nav-pills nav-stacked">
-                    <li class="msg-filter active" id="msg-inbox"><a href="#"><span class="badge pull-right">32</span> Inbox </a> </li>
-                    <li class="msg-filter" id="msg-sent"><a href="#"><span class="badge pull-right"></span> Sent Messages </a> </li>
-                    <li class="msg-filter" id="msg-students"><a href="#"><span class="badge pull-right"></span>From Students</a></li>
-                    <li class="msg-filter" id="msg-tutors"><a href="#"><span class="badge pull-right"></span>From Tutors</a></li>
-                    <li class="msg-filter" id="msg-admins"><a href="#"><span class="badge pull-right"></span>From Administrators</a></li>
-                </ul>
+                    <li class="msg-filter active" id="msg-inbox"><a href="#"> Inbox </a> </li>
             </div>
             <div class="col-sm-9 col-md-10">
                 <!-- Nav tabs -->
