--- a/html/messagecenter.html
+++ b/html/messagecenter.html
@@ -57,7 +57,7 @@
             <div class="col-sm-3 col-md-2">
             </div>
             <div class="col-sm-9 col-md-10">
-                <button type="button" class="btn btn-default" data-toggle="tooltip" title="Refresh">
+                <button type="button" class="btn btn-refresh btn-default" data-toggle="tooltip" title="Refresh">
                     <span class="glyphicon glyphicon-refresh"></span></button>
                 <!-- Single button -->
             </div>
